syntax = "proto3";

package apigolangtemplate.pkg.proto;

import "google/protobuf/timestamp.proto";

option go_package = "/proto";

service ApiGolangTemplate {
  rpc ListExample (ExampleListRequest) returns (ExampleListResponse);
}

message Example {
  int32 id = 1 [json_name = "id"];
  string name = 2 [json_name = "name"];

  google.protobuf.Timestamp created_at = 3 [json_name = "created_at"];
  google.protobuf.Timestamp updated_at = 4 [json_name = "updated_at"];
  google.protobuf.Timestamp deleted_at = 5 [json_name = "deleted_at"];
}

message ExampleListRequest {
  // default is 100
  optional int32 page_size = 1 [json_name = "page_size"];
  // default is 0
  optional int32 page = 2 [json_name = "page"];
  optional string search = 3 [json_name = "search"];
}

message ExampleListResponse {
  int32 next = 1 [json_name = "next"];
  int32 previous = 2 [json_name = "previous"];
  int32 page_size = 3 [json_name = "page_size"];
  int32 count = 4 [json_name = "count"];
  repeated Example data = 5 [json_name = "data"];
}
